--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         
         <div class="ui bottom attached active tab ">
-            <div class="ui bottom attached tab " data-tab="first">
+            <div class="ui bottom attached active tab " data-tab="first">
                 <div class="layout">
 
                     <!-- left -->
@@ -118,7 +118,7 @@
 
             <!-- Second Tab  -->
             <!-- ================================================================= -->
-            <div class="ui bottom attached active tab" data-tab="second">
+            <div class="ui bottom attached  tab" data-tab="second">
                 
                 <div class="ui form" style="margin: 20px;">
                     <div class="ui form">
