--- a/index.html
+++ b/index.html
@@ -21,22 +21,14 @@
 </head>
 
 <body class="">
-    <div style="background-color: rgb(255, 190, 92); padding: 10px 20px; display: flex; justify-content: space-between;">
+    <div style="background-color: rgb(127, 92, 255); padding: 10px 20px; display: flex; justify-content: space-between;">
         <div style="display: flex; align-items: center;">
             <img src="icon.png" alt="" width="30px">
             <h2 style="margin: 0; padding: 0; margin-left: 10px; color: white; font-size: 18px;">URL Decode; </h2>  <small class="text-white" style="margin-left: 10px; margin-top: 3px;"> KOSIGN(B2B)</small>
         </div>
-        <div class="ui mini images">
-            <img class="ui image circular" src="/img/b ratha2.jpg">
-            <img class="ui image circular" src="/img/khaw2.jpg">
-            <img class="ui image circular" src="/img/vimean2.jpg">
-            <img class="ui image circular" src="/img/vanda2.jpg">
-            <img class="ui image circular" src="/img/both2.jpg">
-            <img class="ui image circular" src="/img/yuth2.jpg">
-            <img class="ui image circular" src="/img/boonlin2.jpg">
-          </div>
        <div>
-        <div class="ui toggle checkbox">
+        <div class="ui toggle checkbox" style="display: flex; align-items: center;">
+            <img class="ui mini image circular" src="https://lh3.googleusercontent.com/a/AEdFTp4ep1CHV34BvJdRCYBp6-OQaFAZyA23GoaxCmhEgQ=s96-c-rg-br100" style="margin-right: 10px;">
             <input type="checkbox" id="dark_mode">
             <label class="text-white">Dark Mode </label>
         </div>
