--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
             <h2 style="margin: 0; padding: 0; margin-left: 10px; color: white; font-size: 18px;">URL Decode; </h2>  <small class="text-white" style="margin-left: 10px; margin-top: 3px;"> KOSIGN(B2B)</small>
         </div>
        <div>
-        <div class="ui toggle checkbox" style="display: flex; align-items: center;">
-            <img class="ui mini image circular" src="https://lh3.googleusercontent.com/a/AEdFTp4ep1CHV34BvJdRCYBp6-OQaFAZyA23GoaxCmhEgQ=s96-c-rg-br100" style="margin-right: 10px;">
+       <div style="display: flex;align-items: center;">
+        <img class="ui mini image circular" src="https://lh3.googleusercontent.com/a/AEdFTp4ep1CHV34BvJdRCYBp6-OQaFAZyA23GoaxCmhEgQ=s96-c-rg-br100" style="margin-right: 10px;">
+        <div class="ui toggle checkbox">
             <input type="checkbox" id="dark_mode">
             <label class="text-white">Dark Mode </label>
         </div>
+       </div>
        </div>
     </div>
 
