--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="">
-    <div style="background-color: rgb(127, 92, 255); padding: 10px 20px; display: flex; justify-content: space-between;">
+    <div class="nav_bar" style="padding: 10px 20px; display: flex; justify-content: space-between;">
         <div style="display: flex; align-items: center;">
             <img src="icon.png" alt="" width="30px">
             <h2 style="margin: 0; padding: 0; margin-left: 10px; color: white; font-size: 18px;">URL Decode; </h2>  <small class="text-white" style="margin-left: 10px; margin-top: 3px;"> KOSIGN(B2B)</small>
