--- a/index.html
+++ b/index.html
@@ -182,5 +182,7 @@
 
     <input type="hidden" name="" id="tem_input">
     <script src="js/main.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1060662052369608"
+     crossorigin="anonymous"></script>
 </body>
 </html>
