--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                             <button data-tooltip="Ex: getData => GET_DATA" data-inverted="" data-position="top left" class="ui button tiny circular btn_snake_case">Snake Case</button>
                             <button data-tooltip="Ex: GET_DATA => getData" data-inverted="" data-position="top left" class="ui button tiny circular btn_camel_case">Camel Case</button>
                         </div>
-                        <div class="ui form" style="margin-top: 10px;">
+                        <div class="ui form" style="margin-top: 20px;">
                             <div class="field">
-                                <label>Result</label>
+<!--                                <label>Result</label>-->
                                 <!-- <textarea rows="26" id="url_result"></textarea> -->
-                                <pre id="url_result" contenteditable="true">
+                                <pre id="url_result" contenteditable="true" style="margin: 0">
 
                                 </pre>
                             </div>
@@ -104,13 +104,13 @@
                             </div>
                             
                         </div>
-                        <div style="height: 170px; margin-top: 10px;">
+                        <div style="height: 154px; margin-top: 10px;">
                             <div>
                                 <div style="display: flex; overflow-x: auto;" id="save_data_rec">
                                 <div style="padding: 30px; border-radius: 10px;"><h4 style="color: rgb(146, 146, 146);">No Data</h4></div>
                                 </div>
                             </div>
-                            <div style="margin-top: 50px; margin-right: 5px; overflow: hidden;">
+                            <div style="margin-top: 20px; margin-right: 5px; overflow: hidden;">
                                 <button class="ui button tiny circular right floated btn_format2">FORMAT</button>
                                 <button class="ui button tiny circular right floated btn_copy2">COPY</button>
                             </div>
