--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!--                            </div>-->
 <!--                            <button class="ui button blue tiny circular right floated btn_decode">DECODE</button>-->
 
-                            <button data-tooltip="Save in local" data-inverted="" data-position="top left" class="ui button green tiny circular btn_save">Save</button>
+                            <button data-tooltip="Save in local" data-inverted="" data-position="top left" class="ui button blue tiny circular btn_save">Save</button>
                             <button class="ui button tiny circular btn_format">Format</button>
                             <button class="ui button tiny circular btn_copy">Copy</button>
                             <button data-tooltip="Ex: getData => GET_DATA" data-inverted="" data-position="top left" class="ui button tiny circular btn_snake_case">Snake Case</button>
