--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 <!--       </div>-->
 <!--    </div>-->
 <div>
-    <div class="ui secondary menu inverted" style="background-color: #2662e3; padding: 3px 20px">
+    <div class="ui secondary menu inverted" style="background-color: #2662e3; padding: 3px 20px; margin: 0">
         <div class="active item" data-tab="first">URL Decode</div>
         <div class="item" data-tab="jsondiff">JSON Diff</div>
+        <div class="item" data-tab="transformtools">Transform</div>
         <div class="item" data-tab="second">Convert Jex 2.0 to Jex 3.0</div>
     </div>
 
@@ -182,6 +183,12 @@
         <!-- ====================================================== -->
         <div class="ui bottom attached tab" data-tab="jsondiff">
             <iframe src="https://json-diff.com/" style="border: 0; width: 100%; height: 100vh"></iframe>
+        </div>
+
+        <!-- Third Tab -->
+        <!-- ====================================================== -->
+        <div class="ui bottom attached tab" data-tab="transformtools">
+            <iframe src="https://transform.tools/json-to-typescript" style="border: 0; width: 100%; height: 100vh"></iframe>
         </div>
     </div>
 </div>
