--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="active item" data-tab="first">URL Decode</div>
         <div class="item" data-tab="jsondiff">JSON Diff</div>
         <div class="item" data-tab="transformtools">Transform</div>
+        <div class="item" data-tab="dbdiagram">DB Diagram</div>
         <div class="item" data-tab="second">Convert Jex 2.0 to Jex 3.0</div>
     </div>
 
@@ -185,10 +186,16 @@
             <iframe src="https://json-diff.com/" style="border: 0; width: 100%; height: 100vh"></iframe>
         </div>
 
-        <!-- Third Tab -->
+        <!-- Forth Tab -->
         <!-- ====================================================== -->
         <div class="ui bottom attached tab" data-tab="transformtools">
             <iframe src="https://transform.tools/json-to-typescript" style="border: 0; width: 100%; height: 100vh"></iframe>
+        </div>
+
+        <!-- Forth Tab -->
+        <!-- ====================================================== -->
+        <div class="ui bottom attached tab" data-tab="dbdiagram">
+            <iframe src="https://dbdiagram.io/d?utm_referrer=https%3A%2F%2Fwww.google.com%2F" style="border: 0; width: 100%; height: 100vh"></iframe>
         </div>
     </div>
 </div>
