--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!--       </div>-->
 <!--    </div>-->
 <div>
-    <div class="ui secondary menu inverted" style="background-color: #2662e3; padding: 3px 20px; margin: 0">
+    <div class="ui secondary menu inverted mini" style="background-color: #2662e3; padding: 3px 20px; margin: 0">
         <div class="active item" data-tab="first">URL Decode</div>
         <div class="item" data-tab="jsondiff">JSON Diff</div>
         <div class="item" data-tab="transformtools">Transform</div>
