new color feature

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <script src="js/popUp.js"></script>
     <script src="js/js.js"></script>
     <script src="js/jex223.js"></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body class="">
@@ -118,9 +120,9 @@
                         </div>
 
                     </div>
-                    <div style="height: 67px; margin-top: 10px;">
+                    <div style="height: 67px; margin-top: 5px;">
                         <div>
-                            <div style="display: flex; overflow-x: auto;" id="save_data_rec">
+                            <div style="display: flex; overflow-x: auto; height: 95px" id="save_data_rec">
                                 <div style="padding: 30px; border-radius: 10px;"><h4 style="color: rgb(146, 146, 146);">
                                     No Data</h4></div>
                             </div>
