--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div style="height: 67px; margin-top: 5px;">
                         <div>
-                            <div style="display: flex; overflow-x: auto; height: 95px" id="save_data_rec">
+                            <div style="display: flex; overflow-x: auto; height: 83px" id="save_data_rec">
                                 <div style="padding: 30px; border-radius: 10px;"><h4 style="color: rgb(146, 146, 146);">
                                     No Data</h4></div>
                             </div>
@@ -131,8 +131,8 @@
                     </div>
                     <div class="formUrl">
 
-                        <button class="ui button tiny btn_format2">FORMAT</button>
-                        <button class="ui button tiny btn_copy2">COPY</button>
+                        <button class="ui button tiny btn_format2">Format</button>
+                        <button class="ui button tiny btn_copy2">Copy</button>
 
                         <div class="save1" style="margin-top: 10px">
                             <pre contenteditable="true" style="margin: 0"></pre>
@@ -177,6 +177,13 @@
                     </div>
                     <div class="field">
                         <textarea spellcheck="false" rows="50" id="div_text2"></textarea>
+                    </div>
+                </div>
+
+                <div>
+                    <div id="divCodeWrapper">
+    <textarea id="textarea1" wrap="soft" spellcheck="false">
+    </textarea>
                     </div>
                 </div>
             </div>
