--- a/index.html
+++ b/index.html
@@ -173,17 +173,12 @@
 
                 <div class="fields column two">
                     <div class="field">
-                        <textarea spellcheck="false" rows="50" id="div_text1"></textarea>
+<!--                        <textarea spellcheck="false" rows="50" id="div_text1"></textarea>-->
+                        <pre id="code_pre" spellcheck="false" contenteditable="true" style="margin: 0"></pre>
                     </div>
                     <div class="field">
-                        <textarea spellcheck="false" rows="50" id="div_text2"></textarea>
-                    </div>
-                </div>
-
-                <div>
-                    <div id="divCodeWrapper">
-    <textarea id="textarea1" wrap="soft" spellcheck="false">
-    </textarea>
+<!--                        <textarea spellcheck="false" rows="50" id="div_text2"></textarea>-->
+                        <pre id="code_pre2" spellcheck="false" contenteditable="true" style="margin: 0"></pre>
                     </div>
                 </div>
             </div>
