--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="url,decode,khaw,kosign, url decode, json, decode json, json decode,jex, jex framework, json diff, save json, json save, format, json format, pretty json, key to json, joson snakecase">
+    <meta name="description" content="URL Decode is a free website for programmer who usedly work with json.">
     <meta name="google-adsense-account" content="ca-pub-1060662052369608">
     <title>URL Decode;</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1060662052369608"
