--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="url, decode, khaw, kosign, url decode, json, decode json, json decode,jex, jex framework, json diff,
-     khaw json, khaw url decode, mean khaw, khaw mean, kosign url decode, URL Decode, URL, DECODE, URL DECODE, JSON FORMAT,
-     khaw_url_decode, url_decode, url decode online, online decode, json online decode, decode online,
+    <meta name="url" content="https:khaw.life">
+    <meta name="keywords" content="URL Decoder, Decode URL to JSON, URL to JSON Converter, JSON Saver from URL, Web URL Decoder, Online URL Decoder, Decode URL Parameters to JSON, URL Parser and JSON Saver,jex, jex framework, json diff,
+     khaw json, URL Decoding Tool, Convert URL to JSON Online, Decode URI to JSON, kosign url decode, URL Decode, URL, Web Tool for URL Decoding, URL DECODE, JSON FORMAT,
+     khaw_url_decode, url_decode, url decode online, online decode, json online decode, decode online, json decode online,
+     json decode, javascript json decode,
      save json, json save, format, json format, pretty json, key to json, joson snakecase">
     <meta name="description" content="URL Decode is a free website for programmer who usedly work with json.">
     <meta name="google-adsense-account" content="ca-pub-1060662052369608">
