--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
 
                 <div class="fields column two">
                     <div class="field">
-<!--                        <textarea spellcheck="false" rows="50" id="div_text1"></textarea>-->
-                        <pre id="code_pre" spellcheck="false" contenteditable="true" style="margin: 0"></pre>
+                        <textarea spellcheck="false" rows="50" id="code_pre"></textarea>
+<!--                        <pre id="code_pre" spellcheck="false" contenteditable="true" style="margin: 0"></pre>-->
                     </div>
                     <div class="field">
-<!--                        <textarea spellcheck="false" rows="50" id="div_text2"></textarea>-->
-                        <pre id="code_pre2" spellcheck="false" contenteditable="true" style="margin: 0"></pre>
+                        <textarea spellcheck="false" rows="50" id="code_pre2"></textarea>
+<!--                        <pre id="code_pre2" spellcheck="false" contenteditable="true" style="margin: 0"></pre>-->
                     </div>
                 </div>
             </div>
