--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="item" data-tab="jsondiff">JSON Diff</div>
         <div class="item" data-tab="transformtools">Transform</div>
         <div class="item" data-tab="dbdiagram">DB Diagram</div>
+        <div class="item" data-tab="jshtml">HTML 2 Js</div>
         <div class="item" data-tab="second">Convert Jex 2.0 to Jex 3.0</div>
     </div>
 
@@ -222,6 +223,69 @@
         <!-- ====================================================== -->
         <div class="ui bottom attached tab" data-tab="dbdiagram">
             <iframe src="https://dbdiagram.io/d?utm_referrer=https%3A%2F%2Fwww.google.com%2F" style="border: 0; width: 100%; height: 100vh"></iframe>
+        </div>
+
+        <!-- Forth Tab -->
+        <!-- ====================================================== -->
+        <div class="ui bottom attached tab" data-tab="jshtml">
+            <div class="ui container" style="margin-top: 20px">
+                <form class="ui form small">
+                    <div class="field">
+                        <label>Variable Name</label>
+                        <div class="ui left labeled input">
+                            <div class="ui dropdown label" id="vari_type">
+                                <div class="text" id="type_vari">var</div>
+                                <i class="dropdown icon"></i>
+                                <div class="menu">
+                                    <div class="item">var</div>
+                                    <div class="item">let</div>
+                                    <div class="item">const</div>
+                                </div>
+                            </div>
+                            <input type="text" placeholder="variable name" id="vari_nm">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label>past HTML here</label>
+                        <textarea rows="3" id="raw_html"></textarea>
+                    </div>
+                    <div class="field">
+                        <label>Result
+                            <div class="ui icon top left pointing dropdown">
+                                <i class="cog icon"></i>
+                                <div class="menu" id="setting_box">
+                                    <div class="header">Settings</div>
+                                    <div class="item">
+                                        <div class="ui checkbox">
+                                            <input type="checkbox" id="is_show_vari">
+                                            <label>Show Variable Declaration</label>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="ui checkbox">
+                                            <input type="checkbox" id="is_double_q">
+                                            <label>Used double quotes "</label>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="ui checkbox">
+                                            <input type="checkbox" id="is_remove_whitespace">
+                                            <label>Remove whiteSpace</label>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="ui checkbox">
+                                            <input type="checkbox" id="is_remove_line">
+                                            <label>Remove empty line</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </label>
+                        <textarea rows="25" id="result_html"></textarea>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
