--- a/index.html
+++ b/index.html
@@ -279,6 +279,12 @@
                                             <label>Remove empty line</label>
                                         </div>
                                     </div>
+                                    <div class="item">
+                                        <div class="ui checkbox">
+                                            <input type="checkbox" id="is_format">
+                                            <label>Format HTML</label>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </label>
@@ -300,6 +306,7 @@
 </div>
 
 <input type="hidden" name="" id="tem_input">
+<script src='http://lovasoa.github.io/tidy-html5/tidy.js'></script>
 <script src="js/main.js"></script>
 </body>
 </html>
