--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <iframe src="https://dbdiagram.io/d?utm_referrer=https%3A%2F%2Fwww.google.com%2F" style="border: 0; width: 100%; height: 100vh"></iframe>
         </div>
 
-        <!-- Forth Tab -->
+        <!-- HTML 2 JS -->
         <!-- ====================================================== -->
         <div class="ui bottom attached tab" data-tab="jshtml">
             <div class="ui container" style="margin-top: 20px">
@@ -306,7 +306,7 @@
 </div>
 
 <input type="hidden" name="" id="tem_input">
-<script src='http://lovasoa.github.io/tidy-html5/tidy.js'></script>
+<script src='https://lovasoa.github.io/tidy-html5/tidy.js'></script>
 <script src="js/main.js"></script>
 </body>
 </html>
