--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="table-container" style="display: none"></div>
+                    <div id="table-container" style="display: none; overflow-x: auto"></div>
                 </div>
                 <div></div>
                 <!-- Right -->
@@ -165,7 +165,7 @@
                             <pre contenteditable="true" style="margin: 0"></pre>
                         </div>
                     </div>
-                    <div id="table-container2" style="display: none"></div>
+                    <div id="table-container2" style="display: none; overflow-x: auto"></div>
                 </div>
             </div>
         </div>
