--- a/index.html
+++ b/index.html
@@ -366,6 +366,12 @@
                                     </div>
                                     <div class="item">
                                         <div class="ui checkbox">
+                                            <input type="checkbox" id="is_double_d">
+                                            <label>Used `</label>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="ui checkbox">
                                             <input type="checkbox" id="is_remove_whitespace">
                                             <label>Remove whiteSpace</label>
                                         </div>
