--- a/index.html
+++ b/index.html
@@ -384,6 +384,12 @@
                                     </div>
                                     <div class="item">
                                         <div class="ui checkbox">
+                                            <input type="checkbox" id="is_remove_cmd">
+                                            <label>Remove comment</label>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="ui checkbox">
                                             <input type="checkbox" id="is_format">
                                             <label>Format HTML</label>
                                         </div>
