--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="ui bottom attached active tab ">
-        <div class="ui bottom attached tab" data-tab="first">
+        <div class="ui bottom attached tab active" data-tab="first">
             <div class="layout">
 
                 <!-- left -->
@@ -309,7 +309,7 @@
 
         <!-- Calendar tab  -->
         <!-- ================================================================= -->
-        <div class="ui bottom attached tab active" data-tab="calendar_excel">
+        <div class="ui bottom attached tab" data-tab="calendar_excel">
             <div class="my_container">
                 <div class="ui form">
                     <div class="field">
