--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     </div>
 
                     <div class="field">
-                        <label>Result</label>
+                        <label>Result <small style="color:#3743ec;" id="total_row"></small> <small style="color: red" id="duplicate_msg"></small></label>
                         <div class="ui top attached tabular menu">
                             <div class="active item" data-tab="cal_result">SQL</div>
                             <div class="item" data-tab="cal_table">Table</div>
