--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             </div>
 
                             <div>
-                                <button class="ui button icon tiny" id="btn_make_drag_box"><i class="external square alternate icon"></i></button>
+                                <button data-tooltip="double click to pop new window" data-inverted="" data-position="top right" class="ui button icon tiny" id="btn_make_drag_box"><i class="external square alternate icon"></i></button>
                             </div>
                         </div>
 
