--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
                         <textarea rows="25" id="show_ex_result"></textarea>
                     </div>
                 </form>
+                <button class="ui button" id="my_sharing">Click here to share</button>
             </div>
         </div>
 
